testsuite/tests/grammar/invalid_lexers/pattern_5.lkt
import common

lexer foo_lexer {
    ex1 <- p"a"
    ex2 <- p"b"
    ex3 <- p"+"
    ex4 <- p"c"
    ex5 <- p"d"
}

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
